// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`demo: carry a complex extension on a patient the flat input builds the sub-extensions and keeps the required ordinary field 1`] = `
{
  "extension": [
    {
      "extension": [
        {
          "url": "note",
          "valueString": "hello",
        },
      ],
      "id": "note-1",
      "url": "http://example.test/StructureDefinition/noted-complex-extension",
    },
  ],
  "meta": {
    "profile": [
      "http://example.test/StructureDefinition/noted-patient",
    ],
  },
  "resourceType": "Patient",
}
`;

exports[`the generated modules the complex extension the patient carries 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { Extension } from "../../hl7-fhir-r5-core/Extension";

import {
    isRawExtensionInput,
    applyFixedValue,
    applySliceMatch,
    matchesValue,
    setArraySlice,
    getArraySlice,
    ensureSliceDefaults,
    isExtension,
    getExtensionValue,
    pushExtension,
    upsertExtension,
    validateRequired,
    validateExcluded,
    validateFixedValue,
    validateSliceCardinality,
    validateSliceFields,
    validateEnum,
    validateReference,
    validateChoiceRequired,
    validateChoiceProhibited,
    validateMustSupport,
} from "../../profile-helpers";

export type NotedComplexExtension_Extension_NoteSliceFlat = Omit<Extension, "url">;
export type NotedComplexExtension_Extension_NoteSliceFlatAll = NotedComplexExtension_Extension_NoteSliceFlat & {
    readonly url: "note";
}

export type NotedComplexExtension_Extension_DetailSliceFlat = Omit<Extension, "url">;
export type NotedComplexExtension_Extension_DetailSliceFlatAll = NotedComplexExtension_Extension_DetailSliceFlat & {
    readonly url: "detail";
}

export type NotedComplexExtensionProfileRaw = {
    id: string;
    extension?: Extension[];
}

export type NotedComplexExtensionProfileFlat = {
    id: string;
    note: string;
    detail?: string;
}

// CanonicalURL: http://example.test/StructureDefinition/noted-complex-extension (pkg: example.folder.structures#0.0.1)
export class NotedComplexExtensionProfile {
    static readonly canonicalUrl = "http://example.test/StructureDefinition/noted-complex-extension";

    private static readonly noteSliceMatch: Record<string, unknown> = {"url":"note"};
    private static readonly detailSliceMatch: Record<string, unknown> = {"url":"detail"};

    private resource: Extension;

    constructor (resource: Extension) {
        this.resource = resource;
    }

    static from (resource: Extension) : NotedComplexExtensionProfile {
        const profile = new NotedComplexExtensionProfile(resource);
        const { errors } = profile.validate();
        if (errors.length > 0) throw new Error(errors.join("; "))
        return profile;
    }

    static is (resource: unknown) : resource is Extension {
        if (typeof resource !== "object" || resource === null) return false;
        return (resource as { url?: string }).url === NotedComplexExtensionProfile.canonicalUrl;
    }

    static apply (resource: Extension) : NotedComplexExtensionProfile {
        resource.url = NotedComplexExtensionProfile.canonicalUrl;
        applyFixedValue(resource, "url", NotedComplexExtensionProfile.canonicalUrl);
        return new NotedComplexExtensionProfile(resource);
    }

    private static resolveInput (args: NotedComplexExtensionProfileRaw | NotedComplexExtensionProfileFlat) : Extension[] {
        if (isRawExtensionInput<NotedComplexExtensionProfileRaw>(args)) {
            return args.extension ?? [];
        } else {
            const result: Extension[] = [];
            if (args.note !== undefined) {
                result.push({ url: "note", valueString: args.note } as Extension);
            }
            if (args.detail !== undefined) {
                result.push({ url: "detail", valueString: args.detail } as Extension);
            }
            return result;
        }
    }

    static createResource (args: NotedComplexExtensionProfileRaw | NotedComplexExtensionProfileFlat) : Extension {
        const resolvedExtensions = NotedComplexExtensionProfile.resolveInput(args);

        const resource: Extension = {
            url: NotedComplexExtensionProfile.canonicalUrl,
            id: args.id,
            extension: resolvedExtensions,
        }
        return resource;
    }

    static create (args: NotedComplexExtensionProfileRaw | NotedComplexExtensionProfileFlat) : NotedComplexExtensionProfile {
        return NotedComplexExtensionProfile.apply(NotedComplexExtensionProfile.createResource(args));
    }

    toResource () : Extension {
        return this.resource;
    }

    // Field accessors
    getId () : string | undefined {
        return this.resource.id as string | undefined;
    }

    setId (value: string) : this {
        Object.assign(this.resource, { id: value });
        return this;
    }

    getUrl () : string | undefined {
        return this.resource.url as string | undefined;
    }

    // Extensions
    public setNote (value: Omit<Extension, "url"> | Extension): this {
        if (isExtension(value)) {
            if (value.url !== "note") throw new Error(\`Expected extension url 'note', got '\${value.url}'\`)
            upsertExtension(this.resource, value)
        } else {
            upsertExtension(this.resource, { url: "note", ...value } as Extension)
        }
        return this
    }

    public getNote (): Extension | undefined {
        return this.resource.extension?.find(e => e.url === "note")
    }

    public setDetail (value: Omit<Extension, "url"> | Extension): this {
        if (isExtension(value)) {
            if (value.url !== "detail") throw new Error(\`Expected extension url 'detail', got '\${value.url}'\`)
            upsertExtension(this.resource, value)
        } else {
            upsertExtension(this.resource, { url: "detail", ...value } as Extension)
        }
        return this
    }

    public getDetail (): Extension | undefined {
        return this.resource.extension?.find(e => e.url === "detail")
    }

    // Slices
    public setExtensionNote (input?: NotedComplexExtension_Extension_NoteSliceFlat | Extension): this {
        const match = NotedComplexExtensionProfile.noteSliceMatch
        if (input && matchesValue(input, match)) {
            setArraySlice(this.resource.extension ??= [], match, input as Extension)
            return this
        }
        const value = applySliceMatch<Extension>(input ?? {}, match)
        setArraySlice(this.resource.extension ??= [], match, value)
        return this
    }

    public setExtensionDetail (input?: NotedComplexExtension_Extension_DetailSliceFlat | Extension): this {
        const match = NotedComplexExtensionProfile.detailSliceMatch
        if (input && matchesValue(input, match)) {
            setArraySlice(this.resource.extension ??= [], match, input as Extension)
            return this
        }
        const value = applySliceMatch<Extension>(input ?? {}, match)
        setArraySlice(this.resource.extension ??= [], match, value)
        return this
    }

    public getExtensionNote(mode: 'flat'): NotedComplexExtension_Extension_NoteSliceFlatAll | undefined;
    public getExtensionNote(mode: 'raw'): Extension | undefined;
    public getExtensionNote(): NotedComplexExtension_Extension_NoteSliceFlatAll | undefined;
    public getExtensionNote (mode: 'flat' | 'raw' = 'flat'): NotedComplexExtension_Extension_NoteSliceFlatAll | Extension | undefined {
        const match = NotedComplexExtensionProfile.noteSliceMatch
        const item = getArraySlice(this.resource.extension, match)
        if (!item) return undefined
        if (mode === 'raw') return item
        return item as unknown as NotedComplexExtension_Extension_NoteSliceFlatAll
    }

    public getExtensionDetail(mode: 'flat'): NotedComplexExtension_Extension_DetailSliceFlatAll | undefined;
    public getExtensionDetail(mode: 'raw'): Extension | undefined;
    public getExtensionDetail(): NotedComplexExtension_Extension_DetailSliceFlatAll | undefined;
    public getExtensionDetail (mode: 'flat' | 'raw' = 'flat'): NotedComplexExtension_Extension_DetailSliceFlatAll | Extension | undefined {
        const match = NotedComplexExtensionProfile.detailSliceMatch
        const item = getArraySlice(this.resource.extension, match)
        if (!item) return undefined
        if (mode === 'raw') return item
        return item as unknown as NotedComplexExtension_Extension_DetailSliceFlatAll
    }

    // Validation
    validate(): { errors: string[]; warnings: string[] } {
        const profileName = "NotedComplexExtension"
        const res = this.resource
        return {
            errors: [
                ...validateRequired(res, profileName, "id"),
                ...validateSliceCardinality(res, profileName, "extension", {"url":"note"}, "note", 1, 1),
                ...validateSliceFields(res, profileName, "extension", {"url":"note"}, "note", [], [["valueString"]]),
                ...validateSliceCardinality(res, profileName, "extension", {"url":"detail"}, "detail", 0, 1),
                ...validateSliceFields(res, profileName, "extension", {"url":"detail"}, "detail", [], [["valueString"]]),
                ...validateRequired(res, profileName, "url"),
                ...validateFixedValue(res, profileName, "url", NotedComplexExtensionProfile.canonicalUrl),
            ],
            warnings: [],
        }
    }

}

"
`;

exports[`the generated modules the extension whose flat input keeps a required ordinary field 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { Extension } from "../../hl7-fhir-r5-core/Extension";

import {
    isRawExtensionInput,
    applyFixedValue,
    applySliceMatch,
    matchesValue,
    setArraySlice,
    getArraySlice,
    ensureSliceDefaults,
    isExtension,
    getExtensionValue,
    pushExtension,
    upsertExtension,
    validateRequired,
    validateExcluded,
    validateFixedValue,
    validateSliceCardinality,
    validateSliceFields,
    validateEnum,
    validateReference,
    validateChoiceRequired,
    validateChoiceProhibited,
    validateMustSupport,
} from "../../profile-helpers";

export type IdentifiedComplexExtension_Extension_OptionalValueSliceFlat = Omit<Extension, "url">;
export type IdentifiedComplexExtension_Extension_OptionalValueSliceFlatAll = IdentifiedComplexExtension_Extension_OptionalValueSliceFlat & {
    readonly url: "optionalValue";
}

export type IdentifiedComplexExtensionProfileRaw = {
    id: string;
    extension?: Extension[];
}

export type IdentifiedComplexExtensionProfileFlat = {
    id: string;
    optionalValue?: string;
}

// CanonicalURL: http://example.test/StructureDefinition/identified-complex-extension (pkg: example.folder.structures#0.0.1)
export class IdentifiedComplexExtensionProfile {
    static readonly canonicalUrl = "http://example.test/StructureDefinition/identified-complex-extension";

    private static readonly optionalValueSliceMatch: Record<string, unknown> = {"url":"optionalValue"};

    private resource: Extension;

    constructor (resource: Extension) {
        this.resource = resource;
    }

    static from (resource: Extension) : IdentifiedComplexExtensionProfile {
        const profile = new IdentifiedComplexExtensionProfile(resource);
        const { errors } = profile.validate();
        if (errors.length > 0) throw new Error(errors.join("; "))
        return profile;
    }

    static is (resource: unknown) : resource is Extension {
        if (typeof resource !== "object" || resource === null) return false;
        return (resource as { url?: string }).url === IdentifiedComplexExtensionProfile.canonicalUrl;
    }

    static apply (resource: Extension) : IdentifiedComplexExtensionProfile {
        resource.url = IdentifiedComplexExtensionProfile.canonicalUrl;
        applyFixedValue(resource, "url", IdentifiedComplexExtensionProfile.canonicalUrl);
        return new IdentifiedComplexExtensionProfile(resource);
    }

    private static resolveInput (args: IdentifiedComplexExtensionProfileRaw | IdentifiedComplexExtensionProfileFlat) : Extension[] {
        if (isRawExtensionInput<IdentifiedComplexExtensionProfileRaw>(args)) {
            return args.extension ?? [];
        } else {
            const result: Extension[] = [];
            if (args.optionalValue !== undefined) {
                result.push({ url: "optionalValue", valueString: args.optionalValue } as Extension);
            }
            return result;
        }
    }

    static createResource (args: IdentifiedComplexExtensionProfileRaw | IdentifiedComplexExtensionProfileFlat) : Extension {
        const resolvedExtensions = IdentifiedComplexExtensionProfile.resolveInput(args);

        const resource: Extension = {
            url: IdentifiedComplexExtensionProfile.canonicalUrl,
            id: args.id,
            extension: resolvedExtensions,
        }
        return resource;
    }

    static create (args: IdentifiedComplexExtensionProfileRaw | IdentifiedComplexExtensionProfileFlat) : IdentifiedComplexExtensionProfile {
        return IdentifiedComplexExtensionProfile.apply(IdentifiedComplexExtensionProfile.createResource(args));
    }

    toResource () : Extension {
        return this.resource;
    }

    // Field accessors
    getId () : string | undefined {
        return this.resource.id as string | undefined;
    }

    setId (value: string) : this {
        Object.assign(this.resource, { id: value });
        return this;
    }

    getUrl () : string | undefined {
        return this.resource.url as string | undefined;
    }

    // Extensions
    public setOptionalValue (value: Omit<Extension, "url"> | Extension): this {
        if (isExtension(value)) {
            if (value.url !== "optionalValue") throw new Error(\`Expected extension url 'optionalValue', got '\${value.url}'\`)
            upsertExtension(this.resource, value)
        } else {
            upsertExtension(this.resource, { url: "optionalValue", ...value } as Extension)
        }
        return this
    }

    public getOptionalValue (): Extension | undefined {
        return this.resource.extension?.find(e => e.url === "optionalValue")
    }

    // Slices
    public setExtensionOptionalValue (input?: IdentifiedComplexExtension_Extension_OptionalValueSliceFlat | Extension): this {
        const match = IdentifiedComplexExtensionProfile.optionalValueSliceMatch
        if (input && matchesValue(input, match)) {
            setArraySlice(this.resource.extension ??= [], match, input as Extension)
            return this
        }
        const value = applySliceMatch<Extension>(input ?? {}, match)
        setArraySlice(this.resource.extension ??= [], match, value)
        return this
    }

    public getExtensionOptionalValue(mode: 'flat'): IdentifiedComplexExtension_Extension_OptionalValueSliceFlatAll | undefined;
    public getExtensionOptionalValue(mode: 'raw'): Extension | undefined;
    public getExtensionOptionalValue(): IdentifiedComplexExtension_Extension_OptionalValueSliceFlatAll | undefined;
    public getExtensionOptionalValue (mode: 'flat' | 'raw' = 'flat'): IdentifiedComplexExtension_Extension_OptionalValueSliceFlatAll | Extension | undefined {
        const match = IdentifiedComplexExtensionProfile.optionalValueSliceMatch
        const item = getArraySlice(this.resource.extension, match)
        if (!item) return undefined
        if (mode === 'raw') return item
        return item as unknown as IdentifiedComplexExtension_Extension_OptionalValueSliceFlatAll
    }

    // Validation
    validate(): { errors: string[]; warnings: string[] } {
        const profileName = "IdentifiedComplexExtension"
        const res = this.resource
        return {
            errors: [
                ...validateRequired(res, profileName, "id"),
                ...validateSliceCardinality(res, profileName, "extension", {"url":"optionalValue"}, "optionalValue", 0, 1),
                ...validateSliceFields(res, profileName, "extension", {"url":"optionalValue"}, "optionalValue", [], [["valueString"]]),
                ...validateRequired(res, profileName, "url"),
                ...validateFixedValue(res, profileName, "url", IdentifiedComplexExtensionProfile.canonicalUrl),
            ],
            warnings: [],
        }
    }

}

"
`;

exports[`the generated modules the parent's accessors 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { Extension } from "../../hl7-fhir-r5-core/Extension";
import type { Patient } from "../../hl7-fhir-r5-core/Patient";

import { NotedComplexExtensionProfile, type NotedComplexExtensionProfileFlat } from "./Extension_NotedComplexExtension";

import {
    ensureProfile,
    extractComplexExtension,
    isExtension,
    getExtensionValue,
    pushExtension,
    upsertExtension,
    validateRequired,
    validateExcluded,
    validateFixedValue,
    validateSliceCardinality,
    validateSliceFields,
    validateEnum,
    validateReference,
    validateChoiceRequired,
    validateChoiceProhibited,
    validateMustSupport,
} from "../../profile-helpers";

export type NotedPatient_NotedExtracted = Partial<Pick<NotedComplexExtensionProfileFlat, "note" | "detail">>;
export type NotedPatient_NotedVFlat = Pick<NotedComplexExtensionProfileFlat, "note" | "detail">;

// CanonicalURL: http://example.test/StructureDefinition/noted-patient (pkg: example.folder.structures#0.0.1)
export class NotedPatientProfile {
    static readonly resourceType = "Patient";
    static readonly canonicalUrl = "http://example.test/StructureDefinition/noted-patient";

    private resource: Patient;

    constructor (resource: Patient) {
        this.resource = resource;
    }

    static from (resource: Patient) : NotedPatientProfile {
        if (!resource.meta?.profile?.includes(NotedPatientProfile.canonicalUrl)) {
            throw new Error(\`NotedPatientProfile: meta.profile must include \${NotedPatientProfile.canonicalUrl}\`)
        }
        const profile = new NotedPatientProfile(resource);
        const { errors } = profile.validate();
        if (errors.length > 0) throw new Error(errors.join("; "))
        return profile;
    }

    static is (resource: unknown) : resource is Patient {
        if (typeof resource !== "object" || resource === null) return false;
        const r = resource as { resourceType?: string; meta?: { profile?: string[] } };
        if (r.resourceType !== "Patient") return false;
        return (r.meta?.profile ?? []).includes(NotedPatientProfile.canonicalUrl);
    }

    static apply (resource: Patient) : NotedPatientProfile {
        ensureProfile(resource, NotedPatientProfile.canonicalUrl);
        return new NotedPatientProfile(resource);
    }

    static createResource () : Patient {
        const resource: Patient = {
            resourceType: "Patient",
            meta: { profile: [NotedPatientProfile.canonicalUrl] },
        }
        return resource;
    }

    static create () : NotedPatientProfile {
        const resource = NotedPatientProfile.createResource();
        return NotedPatientProfile.apply(resource);
    }

    toResource () : Patient {
        return this.resource;
    }

    // Field accessors
    // Extensions
    public setNoted (input: NotedComplexExtensionProfileFlat | NotedComplexExtensionProfile | Extension): this {
        if (input instanceof NotedComplexExtensionProfile) {
            upsertExtension(this.resource, input.toResource())
        } else if (isExtension<Extension>(input)) {
            if (input.url !== "http://example.test/StructureDefinition/noted-complex-extension") throw new Error(\`Expected extension url 'http://example.test/StructureDefinition/noted-complex-extension', got '\${input.url}'\`)
            upsertExtension(this.resource, input)
        } else {
            upsertExtension(this.resource, NotedComplexExtensionProfile.createResource(input))
        }
        return this
    }

    public getNoted(mode: 'flat'): NotedPatient_NotedExtracted | undefined;
    public getNoted(mode: 'vflat'): NotedPatient_NotedVFlat | undefined;
    public getNoted(mode: 'profile'): NotedComplexExtensionProfile | undefined;
    public getNoted(mode: 'raw'): Extension | undefined;
    public getNoted(): NotedPatient_NotedExtracted | undefined;
    public getNoted (mode: 'flat' | 'vflat' | 'profile' | 'raw' = 'flat'): NotedPatient_NotedExtracted | NotedPatient_NotedVFlat | NotedComplexExtensionProfile | Extension | undefined {
        const ext = this.resource.extension?.find(e => e.url === "http://example.test/StructureDefinition/noted-complex-extension")
        if (!ext) return undefined
        if (mode === 'raw') return ext
        if (mode === 'profile') return NotedComplexExtensionProfile.apply(ext)
        const config = [{ name: "note", valueField: "valueString", isArray: false }, { name: "detail", valueField: "valueString", isArray: false }]
        if (mode === 'vflat') {
            const { errors } = NotedComplexExtensionProfile.apply(ext).validate()
            if (errors.length > 0) throw new Error(errors.join("; "))
            return extractComplexExtension<NotedPatient_NotedVFlat>(ext, config)
        }
        return extractComplexExtension<NotedPatient_NotedExtracted>(ext, config)
    }

    // Slices
    // Validation
    validate(): { errors: string[]; warnings: string[] } {
        const profileName = "NotedPatient"
        const res = this.resource
        return {
            errors: [],
            warnings: [],
        }
    }

}

"
`;
